--- a/GingerMintSoft.Earth.Solar.Cmd/GingerMintSoft.Earth.Location.Cmd.csproj
+++ b/GingerMintSoft.Earth.Solar.Cmd/GingerMintSoft.Earth.Location.Cmd.csproj
@@ -8,7 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\GingerMintSoft.Earth.Solar\GingerMintSoft.Earth.Solar.csproj" />
+    <ProjectReference Include="..\GingerMintSoft.Earth.Solar\GingerMintSoft.Earth.Location.csproj" />
   </ItemGroup>
 
 </Project>
