Add database as singleton service

--- a/GingerMintSoft.Earth.Location.Service/GingerMintSoft.Earth.Location.Service.csproj
+++ b/GingerMintSoft.Earth.Location.Service/GingerMintSoft.Earth.Location.Service.csproj
@@ -12,6 +12,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\DataStore\DataBase.csproj" />
     <ProjectReference Include="..\GingerMintSoft.Earth.Solar\GingerMintSoft.Earth.Location.csproj" />
   </ItemGroup>
 
